@@ -1,6 +1,14 @@
 2008-02-14  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/renderer-controls.c:
+	* src/av-cp/renderer-controls.h:
+
+	Try to get the duration from item metadata. This is to deal with
+	renderers that do not event 'CurrentMediaDuration' through LastChange.
+
+2008-02-14  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/renderer-controls.c:
 
 	No need to create the resource hashtable, just use the resources GList.
 
